--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dompurify": "^3.2.4",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "multer": "^2.0.1",
@@ -46,10 +47,13 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "vite": "^5.1.0"
   }
 }
